Fix viewport height and rotation on mobile, with improvements in --vh calculation

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  --vh: 1vh;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +10,6 @@
 
 body {
   width: 100%;
-
   margin: 0;
   background-image: linear-gradient(
       rgba(131, 80, 219, 0.8),
@@ -16,6 +19,12 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
+}
+
+@media (max-width: 768px) {
+  html {
+    height: calc(var(--vh, 1vh) * 100);
+  }
 }
 
 .no-background {
